fixed MTT spacing

--- a/src/components/MTT/MTT.css
+++ b/src/components/MTT/MTT.css
@@ -1,10 +1,14 @@
 .people {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  margin-bottom: 70px;
 }
 .greeting {
   display: flex;
   justify-content: center;
+  margin: 20px;
+  font-size: x-large;
+  font-weight: 600;
 }
 .person1,
 .person2,
